src/objects/DM_Material__c.object
<CustomObject>
    <description>Case: Track the Material used by DM Request</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Information related to the brand&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>DM Material</relationshipLabel>
        <relationshipName>DM_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Material_External_Id__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  
Function: 
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <externalId>true</externalId>
        <label>DM Material External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecreaseStockAmount__c</fullName>
        <description>/* 
Created by: Chris.Huang 
Used by: Chris.Huang 
Function: Summary DM Stock Flow Quanlity where Type equals &apos;Decrease Stock&apos;. 
Used in: Formular 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>DecreaseStockAmount</label>
        <summarizedField>DM_Stock_Flow__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Stock_Type__c</field>
            <operation>equals</operation>
            <value>Decrease Stock</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DM_Stock_Flow__c.Material_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Due_Date__c</fullName>
        <label>Deployment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Information in English&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>English Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncreaseStockAmount__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: Summary DM Stock Flow Quanlity where Type equals &apos;Increase Stock&apos;.
Used in: Formular 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>IncreaseStockAmount</label>
        <summarizedField>DM_Stock_Flow__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Stock_Type__c</field>
            <operation>equals</operation>
            <value>Increase Stock</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DM_Stock_Flow__c.Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DM_Stock_Flow__c.Material_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Label_Printing_Name__c</fullName>
        <label>Label Printing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBTH_Type__c</fullName>
        <label>MBTH Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brochures/Catalogue</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Invitation Letter/Card</fullName>
                </value>
                <value>
                    <fullName>MB Magazine</fullName>
                </value>
                <value>
                    <fullName>Journals/Magazines/News Letters</fullName>
                </value>
                <value>
                    <fullName>Souvenir/Gifts</fullName>
                </value>
                <value>
                    <fullName>Handbook</fullName>
                </value>
                <value>
                    <fullName>Welcome Pack</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
                <value>
                    <fullName>Loyalty card</fullName>
                </value>
                <value>
                    <fullName>Random Act of Kindness</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preliminary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Due_Date__c</fullName>
        <label>Print Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SentTotal__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: When DM Request Status changed to &apos;Sent&apos;, this field auto add 1.
Used in: Trigger, Formular

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Sent Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;Information related to car&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Series</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>GLK-Class</fullName>
                </value>
                <value>
                    <fullName>ML-Class</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>Jeep</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Chrysler</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Beijing Jeep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz commercial vehicles</fullName>
                </value>
                <value>
                    <fullName>Generic Model</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>A8</fullName>
                </value>
                <value>
                    <fullName>A8L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Alert__c</fullName>
        <formula>IF(Threshold__c &gt;= Stock__c ,IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <label>Stock Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <formula>IncreaseStockAmount__c - DecreaseStockAmount__c  -  SentTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Car Book</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>smart manual</fullName>
                </value>
                <value>
                    <fullName>Letterheads envelopes and consumables</fullName>
                </value>
                <value>
                    <fullName>MB Magazine</fullName>
                </value>
                <value>
                    <fullName>Journals and magazines</fullName>
                </value>
                <value>
                    <fullName>Entrance Ticket</fullName>
                </value>
                <value>
                    <fullName>Presents</fullName>
                </value>
                <value>
                    <fullName>Folding</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DM Material</label>
    <listViews>
        <fullName>Low_Stock_DM_Materials</fullName>
        <columns>NAME</columns>
        <columns>Stock_Alert__c</columns>
        <columns>Type__c</columns>
        <columns>Brand__c</columns>
        <columns>Threshold__c</columns>
        <columns>Stock__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Alert__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Low inventory of direct mail information</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Central</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBK_Low_inventory_of_direct_mail_informa</fullName>
        <columns>NAME</columns>
        <columns>Stock_Alert__c</columns>
        <columns>Type__c</columns>
        <columns>Brand__c</columns>
        <columns>Threshold__c</columns>
        <columns>Stock__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stock_Alert__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>MBK Low inventory of direct mail informa</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBK_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_DM_Material</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MD__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filters>
        <label>My DM Material</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View1</fullName>
        <columns>NAME</columns>
        <columns>DM_Material_External_Id__c</columns>
        <columns>Brand__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Label_Printing_Name__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>販売店</value>
        </filters>
        <label>販売店カタログ_有効</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View2</fullName>
        <columns>NAME</columns>
        <columns>DM_Material_External_Id__c</columns>
        <columns>Brand__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Label_Printing_Name__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>販売店</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>メーカーカタログ</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View3</fullName>
        <columns>NAME</columns>
        <columns>DM_Material_External_Id__c</columns>
        <columns>Brand__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Label_Printing_Name__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>販売店</value>
        </filters>
        <label>販売店カタログ_全て</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View4</fullName>
        <columns>NAME</columns>
        <columns>DM_Material_External_Id__c</columns>
        <columns>Brand__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Label_Printing_Name__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>販売店</value>
        </filters>
        <label>メーカーカタログ全て</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>DM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Material</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LabelPrint_NoOfDigit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( Label_Printing_Name__c) &gt; 23,  OR(MD__c =&apos;JP&apos;,MD__c =&apos;KR&apos;), $Profile.Name != &apos;IntegrationAPI&apos;)</errorConditionFormula>
        <errorDisplayField>Label_Printing_Name__c</errorDisplayField>
        <errorMessage>Label Printing Name should be less than or equal to 23 letters.</errorMessage>
    </validationRules>
</CustomObject>